@@ -1,3 +1,7 @@
+2016/05/24: IGAS v83
+    1. Use macro for spell action buttons, to avoid no use actions.
+    2. Fix stance check.
+
 2016/05/23: IGAS v82
     1. Recode the System.Widget.Unit.SmoothValue to provide more smooth effect.
 
